# nebula

./: .gitignore  ALEMBIC_TRANSCODING_MIGRATION.md  CLI_DOCKER_ANALYSIS.md  FUTURE_EXPANSION.md  GLOBAL_INSTALL_GUIDE.md  NETWORK_PROTOCOL_ANALYSIS.md  PROJECT_REVIEW.md  README.md  STREAMING_GUIDE.md  UPLOAD_ARCHITECTURE.md  benchmark.py  test_upload.txt
.codeviz/Untitled 1/: Unnamed-CodeViz-Diagram.md
client/cli/: .env.client  .env.client.example  pyproject.toml
client/cli/src/: main.py
client/cli/src/commands/: __init__.py  benchmark.py  download.py  list.py  play.py  status.py  system.py  transcode.py  upload.py
nebula-cli/cli/: pyproject.toml
nebula-cli/cli/src/: main.py
nebula-live/: README.md  REQUIREMENTS.md  docker-compose.yml
nebula-live/backend/: Dockerfile  requirements.txt
nebula-live/backend/app/: main.py  worker.py
nebula-live/backend/app/api/: __init__.py  auth.py  files.py  ping.py  stream.py  upload.py
nebula-live/backend/app/core/: __init__.py  config.py  s3_client.py  security.py
nebula-live/backend/app/models/: __init__.py  file.py  job.py  user.py
nebula-live/backend/app/services/: __init__.py  file_service.py  metadata_service.py  transcode_service.py
nebula.git/hooks/: post-receive
server/: .env.example  .gitignore  REQUIREMENTS.md  docker-compose.yml
server/backend/: Dockerfile  alembic.ini  requirements.txt
server/backend/alembic/: env.py
server/backend/alembic/versions/: 3dd5f18f2921_create_files_table.py  4ceb44fe4f35_initial_schema_with_file_model.py  (+2 more)
server/backend/app/: main.py  worker.py
(+21 files in other folders)
